--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.2"
+  compileSdkVersion 27
+  buildToolsVersion '27.0.3'
   defaultConfig {
     applicationId "com.droiders.camera2apitest"
     minSdkVersion 21
-    targetSdkVersion 25
+    targetSdkVersion 27
     versionCode 1
     versionName "1.0"
   }
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'com.android.support:appcompat-v7:25.1.1'
-  compile files('libs/camera-v1.2.1.jar')
-  compile files('libs/sdk-v1.0.0.jar')
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'com.android.support:appcompat-v7:27.1.1'
+  implementation files('libs/camera-v1.3.0.jar')
+  implementation files('libs/sdk-v1.0.0.jar')
 }
